Should fix the zoomer problem when playing with screen on tablet

--- a/public/css/yves.css
+++ b/public/css/yves.css
@@ -299,7 +299,7 @@
 .zoomon {
   display: flex;
   position: absolute;
-  height: 100%;
+  height: 100dvh;
   width: 100%;
   justify-content: center;
   align-items: center;
